--- a/DSP/EventosApp/App/Views/eventos/listar.html
+++ b/DSP/EventosApp/App/Views/eventos/listar.html
@@ -1,4 +1,5 @@
-﻿<div ng-controller="eventosController">
+﻿<div>
+    <h2>{{titulo}}</h2>
     <ul>
         <li ng-repeat="evento in eventos" ng-click="detalhar(evento)">
             <strong>{{evento.titulo}}</strong><br />
@@ -8,3 +9,4 @@
         </li>
     </ul>
 </div>
+<a href="#/main">voltar</a>
