--- a/DSP/EventosApp/App/Views/layout/main.html
+++ b/DSP/EventosApp/App/Views/layout/main.html
@@ -1,4 +1,11 @@
 ﻿<div>
-    {{ titulo }}
-    <a href="#/eventos">ver eventos em destaque</a>
+    <h2 class="text-center">{{ titulo }}</h2>
+    <ul>
+        <li ng-repeat="evento in eventos" ng-click="detalhar(evento)">
+            <strong>{{evento.titulo}}</strong><br />
+            de {{evento.inicio}} até {{evento.termino}}<br />
+            local: {{evento.local}}<br />
+            organizador: {{evento.organizador}}<br /><br />
+        </li>
+    </ul>
 </div>
