integracao basica com sharepoint rest api para listar os eventos.

--- a/DSP/EventosApp/App/Views/eventos/detalhar.html
+++ b/DSP/EventosApp/App/Views/eventos/detalhar.html
@@ -5,7 +5,7 @@
                 <h1 class="">{{evento.titulo}}</h1>
                 <h2>{{evento.descricao}}</h2>
                 <hr />
-                
+
                 <div class="margin-top-20"></div>
             </div>
             <div class="col-md-4">
@@ -37,27 +37,9 @@
                     <h4 class="font-mon no-margin">
                         Detalhes do Evento
                     </h4>
-                    <!--<p>{{evento.detalhamento}}</p>-->
                 </div>
                 <div class="panel-body">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque a mauris odio. Suspendisse eleifend nec felis faucibus ullamcorper. Donec ipsum neque, pretium eget dolor vitae, eleifend ultrices augue. Nullam dapibus tristique malesuada. Suspendisse turpis risus, fermentum ac volutpat eu, semper gravida augue. Donec euismod ac libero eget molestie. Nam bibendum fermentum semper.
-                    </p>
-                    <p>
-                        <ul>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                            <li>Proin in nisl porta, iaculis enim sit amet, egestas ante.</li>
-                        </ul>
-                    </p>
-                    <p>
-                        <ul>
-                            <li>Etiam et elit in nulla viverra rhoncus.</li>
-                            <li>Vivamus vestibulum odio ullamcorper dolor pretium posuere.</li>
-                            <li>Nam at nisi ut magna interdum tincidunt nec ut est.</li>
-                            <li>Duis eget lorem iaculis, finibus dui ut, mattis felis.</li>
-                        </ul>
-                    </p>
-
+                    {{evento.detalhes}}
                 </div>
             </div>
             <div class="margin-top-20"></div>
