--- a/DSP/EventosApp/App/Views/layout/main.html
+++ b/DSP/EventosApp/App/Views/layout/main.html
@@ -1,5 +1,5 @@
 ﻿<div data-ng-include="'App/Views/layout/fullHeader.html'"></div>
-<div class="container">
+<div class="container view-container">
     <div class="row">
         <div class="col-md-12">
             <div class="page-header text-center">
