--- a/DSP/EventosApp/Content/App.css
+++ b/DSP/EventosApp/Content/App.css
@@ -64,8 +64,7 @@
     background: -ms-linear-gradient(top, #f44d1c 0%,#e0351a 50%,#e0351a 51%,#d61f19 100%); /* IE10+ */
     background: linear-gradient(to bottom, #f44d1c 0%,#e0351a 50%,#e0351a 51%,#d61f19 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f44d1c', endColorstr='#d61f19',GradientType=0 ); /* IE6-9 */
-   
-     padding-top: 78px;
+    padding-top: 78px;
     padding-bottom: 148px;
     color: #fff;
     text-align: center;
@@ -75,7 +74,7 @@
     padding-top: 38px;
     padding-bottom: 38px;
     background: #ebebeb;
-   }
+}
 
     .topo h1, .topo-detalhar-evento h1 {
         font-family: 'Montserrat', sans-serif;
@@ -118,3 +117,69 @@
 .btn-inscricao {
     width: 100%;
 }
+
+
+/*#region angular dissolve animation */
+.dissolve-animation.ng-hide-remove {
+  display: inline !important;
+}
+
+.dissolve-animation.ng-hide-remove,
+.dissolve-animation.ng-hide-add {
+  -webkit-transition: 0.8s linear all;
+  -moz-transition: 0.8s linear all;
+  -o-transition: 0.8s linear all;
+  transition: 0.8s linear all;
+}
+
+  .dissolve-animation.ng-hide-remove.ng-hide-remove-active,
+  .dissolve-animation.ng-hide-add {
+    opacity: 1;
+  }
+
+    .dissolve-animation.ng-hide-add.ng-hide-add-active,
+    .dissolve-animation.ng-hide-remove {
+      opacity: 0;
+    }
+/*#endregion */
+
+/* animation container - ensure animate only the body of the page*/
+.view-container {
+  position: relative;
+  overflow: hidden;
+}
+
+/*#region angular shuffle animation */
+.shuffle-animation.ng-enter,
+.shuffle-animation.ng-leave {
+    position: relative;
+}
+
+.shuffle-animation.ng-enter {
+    -moz-transition: ease-out all 0.3s 0.4s;
+    -o-transition: ease-out all 0.3s 0.4s;
+    -webkit-transition: ease-out all 0.3s 0.4s;
+    transition: ease-out all 0.3s 0.4s;
+    left: 2em;
+    opacity: 0;
+}
+
+    .shuffle-animation.ng-enter.ng-enter-active {
+        left: 0;
+        opacity: 1;
+    }
+
+.shuffle-animation.ng-leave {
+    -moz-transition: 0.3s ease-out all;
+    -o-transition: 0.3s ease-out all;
+    -webkit-transition: 0.3s ease-out all;
+    transition: 0.3s ease-out all;
+    left: 0;
+    opacity: 1;
+}
+
+    .shuffle-animation.ng-leave.ng-leave-active {
+        left: 2em;
+        opacity: 0;
+    }
+/*#endregion */
