--- a/DSP/EventosApp/Content/App.css
+++ b/DSP/EventosApp/Content/App.css
@@ -50,6 +50,8 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+body { overflow-y:scroll; }
+
 /* apenas sobrescrevendo fonte padrão do sharepoint para o app chrome*/
 #suiteBar {
     font-family: 'Montserrat', sans-serif;
@@ -118,68 +120,19 @@
     width: 100%;
 }
 
-
-/*#region angular dissolve animation */
-.dissolve-animation.ng-hide-remove {
-  display: inline !important;
+/* you can also define the transition style
+   on the base class as well (.repeat-item) */
+.view-container.ng-enter,
+.view-container.ng-leave {
+  -webkit-transition:0.4s ease-in-out all;
+  transition:0.4s ease-in-out all;
 }
 
-.dissolve-animation.ng-hide-remove,
-.dissolve-animation.ng-hide-add {
-  -webkit-transition: 0.8s linear all;
-  -moz-transition: 0.8s linear all;
-  -o-transition: 0.8s linear all;
-  transition: 0.8s linear all;
+.view-container.ng-enter,
+.view-container.ng-leave.ng-leave-active {
+  opacity:0;
 }
-
-  .dissolve-animation.ng-hide-remove.ng-hide-remove-active,
-  .dissolve-animation.ng-hide-add {
-    opacity: 1;
-  }
-
-    .dissolve-animation.ng-hide-add.ng-hide-add-active,
-    .dissolve-animation.ng-hide-remove {
-      opacity: 0;
-    }
-/*#endregion */
-
-/* animation container - ensure animate only the body of the page*/
-.view-container {
-  position: relative;
-  overflow: hidden;
+.view-container.ng-leave,
+.view-container.ng-enter.ng-enter-active {
+  opacity:1;
 }
-
-/*#region angular shuffle animation */
-.shuffle-animation.ng-enter,
-.shuffle-animation.ng-leave {
-    position: relative;
-}
-
-.shuffle-animation.ng-enter {
-    -moz-transition: ease-out all 0.3s 0.4s;
-    -o-transition: ease-out all 0.3s 0.4s;
-    -webkit-transition: ease-out all 0.3s 0.4s;
-    transition: ease-out all 0.3s 0.4s;
-    left: 2em;
-    opacity: 0;
-}
-
-    .shuffle-animation.ng-enter.ng-enter-active {
-        left: 0;
-        opacity: 1;
-    }
-
-.shuffle-animation.ng-leave {
-    -moz-transition: 0.3s ease-out all;
-    -o-transition: 0.3s ease-out all;
-    -webkit-transition: 0.3s ease-out all;
-    transition: 0.3s ease-out all;
-    left: 0;
-    opacity: 1;
-}
-
-    .shuffle-animation.ng-leave.ng-leave-active {
-        left: 2em;
-        opacity: 0;
-    }
-/*#endregion */
