--- a/DSP/EventosApp/App/Views/eventos/detalhar.html
+++ b/DSP/EventosApp/App/Views/eventos/detalhar.html
@@ -1,4 +1,4 @@
-﻿<div class="topo-detalhar-evento">
+﻿<div class="topo-detalhar-evento" id="topo">
     <div class="container">
         <div class="row">
             <div class="col-md-8">
