ajustes e refatorada de leve

--- a/DSP/EventosApp/App/Views/eventos/detalhar.html
+++ b/DSP/EventosApp/App/Views/eventos/detalhar.html
@@ -15,14 +15,13 @@
         </div>
     </div>
 </div>
-<div class="container margin-top-20">
+<div class="container margin-top-20 ">
     <ol class="breadcrumb font-mon">
         <li><a href="#/main">Início</a></li>
-        <li><a href="#/eventos/">Eventos</a></li>
         <li class="active">{{evento.titulo}}</li>
     </ol>
 </div>
-<div class="container">
+<div class="container view-container">
     <div class="row">
         <!--<div class="col-md-12">
             <div class="page-header">
