--- a/DSP/EventosApp/App/Views/layout/main.html
+++ b/DSP/EventosApp/App/Views/layout/main.html
@@ -1,18 +1,14 @@
-﻿<div data-ng-include="'App/Views/layout/fullHeader.html'"></div>
-<div class="container ">
+﻿<div class="container">
     <div class="row">
         <div class="col-md-12">
-            <div class="page-header text-center">
-                <h1 class="font-mon">{{ titulo }}</h1>
+            <div class="page-header">
+                <h3 class="font-mon">{{ titulo }}</h3>
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-md-4 col-xs-12 efeito-hover" ng-repeat="evento in eventos" ng-click="detalhar(evento)">
             <div class="panel panel-default evento-box" title="{{evento.titulo}}">
-                <!--<div class="panel-heading text-center">{{evento.titulo}}</div>-->
-
                 <div class="evento-box-bg" style="background-image:url('{{evento.banner}}')"></div>
                 <hr class="no-margin" />
                 <div class="padding-10">
