--- a/DSP/EventosApp/App/Views/layout/sharepointAppChrome.html
+++ b/DSP/EventosApp/App/Views/layout/sharepointAppChrome.html
@@ -1,1 +1,1 @@
-﻿<div data-ng-controller="SharePointAppChromeController" id="chrome_ctrl_container"></div>
+﻿<div data-ng-controller="sharepointAppChromeController as ctrl" id="chrome_ctrl_container"></div>
