--- a/DSP/EventosApp/App/Views/layout/main.html
+++ b/DSP/EventosApp/App/Views/layout/main.html
@@ -7,7 +7,17 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4 col-xs-12 efeito-hover" ng-repeat="evento in eventos" ng-click="detalhar(evento)">
+        <div class="col-md-12">
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-addon"><i class="glyphicon glyphicon-zoom-in"></i></div>
+                    <input class="form-control" type="text" data-ng-model="evento" placeholder="encontre o seu evento...">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4 col-xs-12 efeito-hover" ng-repeat="evento in eventos | filter:evento" ng-click="detalhar(evento)">
             <div class="panel panel-default evento-box" title="{{evento.titulo}}">
                 <div class="evento-box-bg" style="background-image:url('{{evento.banner}}')"></div>
                 <hr class="no-margin" />
